objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Num_of_Medical_Products_Lost_IGAP_Lost__c</fullName>
        <description>Counts QLIs on Quote of type Medical and product stage of Lost, IGAP Lost, Dead, IGAP Dead</description>
        <label>Num of Medical Products Lost/IGAP Lost</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Lost, Lost, IGAP Dead, Dead</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Accident_Products_Finalized__c</fullName>
        <label>Number of Accident Products Finalized</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Accident</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Renewed, Sold, Termed, Not renewing in Current Period</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Dental_Product_Finalized__c</fullName>
        <label>Number of Dental Product Finalized</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Renewed, Sold, Termed, Not renewing in Current Period</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Dental_Product_Sold__c</fullName>
        <label>Number of Dental Product Sold</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Disability_Product_Finalized__c</fullName>
        <label>Number of Disability Product Finalized</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Disability</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Renewed, Sold, Termed, Not renewing in Current Period</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Disability_Product_Sold_STD__c</fullName>
        <label>Number of Disability Product Sold</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>STD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Disability_Product_Sold__c</fullName>
        <label>Number of Disability Product Sold</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>LTD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_LTD_Product_Finalized__c</fullName>
        <label>Number of LTD Product Finalized</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>LTD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Renewed, Sold, Termed, Not renewing in Current Period</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Life_Product_Finalized__c</fullName>
        <label>Number of Life Product Finalized</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Life</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Renewed, Sold, Termed, Not renewing in Current Period</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Life_Product_Sold__c</fullName>
        <label>Number of Life Product Sold</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Life</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Medical_Product_sold__c</fullName>
        <description>This field rolls up the number medical product sold associated to Quote.</description>
        <label>Number of Medical Product sold</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Sold, Renewed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.HPCC_Code__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Medical_Products__c</fullName>
        <label>Number of Medical Products</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_STD_Product_Finalized__c</fullName>
        <label>Number of STD Product Finalized</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>STD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Renewed, Sold, Termed, Not renewing in Current Period</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Vision_Product_Finalized__c</fullName>
        <label>Number of Vision Product Finalized</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Renewed, Sold, Termed, Not renewing in Current Period</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Vision_Product_Sold__c</fullName>
        <description>This field give the count of Vision product that are in Sold/IGAP Sold Status.</description>
        <label>Number of Vision Product Sold</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Type_Identifier__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Sold, Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofASOProductLines__c</fullName>
        <label>Number of ASO Product Lines</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Funding__c</field>
            <operation>equals</operation>
            <value>ASO</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofFIProductLines__c</fullName>
        <description>Number of FI Quote Line items</description>
        <label>Number of FI Product Lines</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Funding__c</field>
            <operation>equals</operation>
            <value>FI</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofOpenProductsProgramsGROUP__c</fullName>
        <label>Number of Open Products &amp; Programs GROUP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofOpenProducts__c</fullName>
        <label>Number of Open Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OAD_Auto_Delete__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>Identifies whether dependents will remain on the subscribers contract or be automatically deleted if the appropriate criteria is not met.</inlineHelpText>
        <label>OAD Auto Delete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Effective_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Group_Number__c</fullName>
        <description>Stores legacy ID value of Opportunity Group Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Loss_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partial Loss - Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Loss_Membership_at_Risk__c</fullName>
        <label>Partial Loss - Membership at Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partial_Loss_Potential_Loss_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partial Loss - Potential Loss Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partial_Loss_Probability_of_Loss__c</fullName>
        <label>Partial Loss - Probability of Loss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PaymentInnovationInitiativesException__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this customer requested an exception from Payment Innovation Initiatives? 
If client has had EPHC opt out previously, this question is not applicable.</inlineHelpText>
        <label>Payment Innovation Initiatives Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QLIFinJAA__c</fullName>
        <label>QLIFinJAA</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Financing__c</field>
            <operation>equals</operation>
            <value>JAA (Jointly Administered Arrangement)</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QLI_Validation_Fire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QLI Validation Fire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteLineItemFundingType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Line Item Funding Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Submit_Engage_Scoping_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For sending Email to User(13952)</description>
        <label>Ready to Submit Engage Scoping Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowGroupNumberProfiles__c</fullName>
        <formula>IF( AND(
( OR(ISPICKVAL(Opportunity.Account.Anthem_Entity__c,&apos;Local/Large Group&apos;),ISPICKVAL(Opportunity.Account.Anthem_Entity__c,&apos;Labor and Trust&apos;),ISPICKVAL(Opportunity.Account.Anthem_Entity__c,&apos;National Accounts&apos;)   )),
(LoggedInUserProfile__c == &quot;National Implementations&quot;|| LoggedInUserProfile__c == &quot;National Implementations Dual&quot; || LoggedInUserProfile__c == &quot;National Open Enrollment&quot;||
 LoggedInUserProfile__c == &quot;National Sales&quot; || LoggedInUserProfile__c == &quot;National Sales Dual&quot;)) , &quot;Do not Show Button&quot;, &quot;Show Button&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show GroupNumber Profiles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>TEXT(Opportunity.Account.Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribers__c</fullName>
        <description>These are temporal fields added for request 1260. These values will be used when creating a standalone IGAP opportunity and directly connect to the AddProduct OS.</description>
        <label>Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_QuoteIdForRenewalOpty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TECH_QuoteIdForRenewalOpty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermedPLs__c</fullName>
        <description>Count of termed Quote Line items</description>
        <label>Termed PLs</label>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>IGAP Dead, IGAP Lost, Termed</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Terminated_Reserveless_MPP_Funding__c</fullName>
        <description>This field is being added specifically for WGS to support the Group Load functionality through Customer Master.</description>
        <inlineHelpText>A code designating which check stock to issue paid claims on for the run-out of a Terminated Reserveless MPP Funding Arrangement. Needed for Central regions and NY, all other States leave blank.This field was added for the WGS system and the Group Load.</inlineHelpText>
        <label>Terminated Reserveless MPP Funding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <label>MPP Check Stock for 3 Months After Term</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Insured Check Stock</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalMedicalMembers__c</fullName>
        <description>The Total Members of the Medical Product Lines</description>
        <label>Total Medical Members</label>
        <summarizedField>QuoteLineItem.Members__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.RecordType__c</field>
            <operation>equals</operation>
            <value>FlexHour Medical, Medical, Medical CDHP, Medical CDHP WCIC, Medical WCIC, ActWise HRA, ActWise HSA, Medical CDHP HRA, Medical CDHP HSA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>In Progress, Sold, IGAP In Progress, IGAP Sold, Jeopardy, Renewed</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalMedicalSubscribers__c</fullName>
        <description>The Total Members of the Medical Product Lines</description>
        <label>Total Medical Subscribers</label>
        <summarizedField>QuoteLineItem.Subscribers__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.RecordType__c</field>
            <operation>equals</operation>
            <value>FlexHour Medical, Medical, Medical CDHP, Medical CDHP WCIC, Medical WCIC, ActWise HRA, ActWise HSA, Medical CDHP HRA, Medical CDHP HSA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>In Progress, IGAP In Progress, IGAP Sold, Jeopardy, Renewed, Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalMembers__c</fullName>
        <formula>IF(TotalMedicalMembers__c &gt;0,TotalMedicalMembers__c ,TotalNonMedicalMembers__c)</formula>
        <inlineHelpText>The Total Members of the Product Lines</inlineHelpText>
        <label>Total Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNonMedicalMembers__c</fullName>
        <description>The maximum Members of the Product Lines</description>
        <label>Total Non Medical Members</label>
        <summarizedField>QuoteLineItem.Members__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>In Progress, IGAP In Progress, IGAP Sold, Jeopardy, Renewed</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNonMedicalSubscribers__c</fullName>
        <description>The maximum subscribers of the Product Lines</description>
        <label>Total Non Medical Subscribers</label>
        <summarizedField>QuoteLineItem.Subscribers__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.ProductStage__c</field>
            <operation>equals</operation>
            <value>In Progress, IGAP In Progress, IGAP Sold, Jeopardy, Renewed,Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalProductLines__c</fullName>
        <description>How many Quote Lines items under this Quote?</description>
        <label>Total Product Lines</label>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalSubscribers__c</fullName>
        <description>The total subscribers of the Product Lines</description>
        <formula>IF(TotalMedicalSubscribers__c  &gt;0 ,TotalMedicalSubscribers__c,TotalNonMedicalSubscribers__c)</formula>
        <label>Total Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UseDivisionNameasGroupName__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By checking this box, you are indicating that this division name should be used as the group legal name</inlineHelpText>
        <label>Use Division Name as Group Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserGroup__c</fullName>
        <formula>IF(ISPICKVAL($User.User_Group__c, &apos;Local&apos;),&apos;Local&apos;, IF(ISPICKVAL($User.User_Group__c, &apos;National&apos;),&apos;National&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserGroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGSCompanySizeCode__c</fullName>
        <inlineHelpText>Based on number of eligible employees (contracts)</inlineHelpText>
        <label>WGS Company Size Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A -- 2 - 49 contracts</fullName>
                </value>
                <value>
                    <fullName>B -- 50 - 99 contracts</fullName>
                </value>
                <value>
                    <fullName>C -- 100 - 199 contracts</fullName>
                </value>
                <value>
                    <fullName>D -- 200 - 299 contracts</fullName>
                </value>
                <value>
                    <fullName>E -- 300 - 399 contracts</fullName>
                </value>
                <value>
                    <fullName>F -- 400 - 499 contracts</fullName>
                </value>
                <value>
                    <fullName>G -- 500 - 999 contracts</fullName>
                </value>
                <value>
                    <fullName>H -- 1,000 - 4,999 contracts</fullName>
                </value>
                <value>
                    <fullName>I -- 5,000 + contracts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isView_Configure_Product_Details_Show__c</fullName>
        <formula>IF(ISBLANK( CDHP_SF_Id_From_ISG__c ), &apos;Show&apos;, &apos;Hide&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isView/Configure Product Details_Show</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AgencyBrokerageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency/Brokerage</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculatedPriceJSON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Calculated Price Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DaysRemaining__c</fullName>
        <description>Difference between end date and effective date, including the end date.</description>
        <formula>vlocity_ins__EndDate__c - vlocity_ins__EffectiveDate__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this quote</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupCensusId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Census</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__GroupCensus__c.vlocity_ins__CensusStatus__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__GroupCensus__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if quote requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JurisdictionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Jurisdiction for the Quote.</description>
        <label>Jurisdiction</label>
        <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
        <relationshipLabel>Quote Jurisdiction</relationshipLabel>
        <relationshipName>QuoteJurisdiction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO (Admin Services Only)</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Mid Sized Group</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MonthlyPremium__c</fullName>
        <label>Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpportunityAccountId__c</fullName>
        <description>Formula: opportunity&apos;s account identifier casted to a text value.</description>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalFeeForTerm__c</fullName>
        <description>The original total amount of fee that will be collected for this quote over the full term.</description>
        <label>Original Fee for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalPremiumForTerm__c</fullName>
        <description>The original total amount of premium that will be collected for this quote over the full term.</description>
        <label>Original Premium for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalTaxForTerm__c</fullName>
        <description>The original total amount of tax that will be collected for this quote over the full term.</description>
        <label>Original Tax for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipLabel>Quotes Using This Price List</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryProductId__c</fullName>
        <formula>vlocity_ins__PrimaryRootItemId__r.Product2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quoted Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryRootItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Root Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Parent Quote for Primary Product</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProducerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>